CE04 added a few images for the image list
added a few images for the image list.
debugging through the open form counts

--- a/VFW/EdwardWelborn_CE04/EdwardWelborn_CE04/UserInputForm.resx
+++ b/VFW/EdwardWelborn_CE04/EdwardWelborn_CE04/UserInputForm.resx
@@ -124,7 +124,7 @@
   <data name="tspbtnAddToList.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAB9kSURBVHhe7d1psG1nWeDxDZiEIdiMWgUoJAhhEMQuha6u
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAB9kSURBVHhe7d1psG1nWeDxDZiEIdiMWgUoJAhhEMQuha6u
         tFilHxQJiEoVNi1VTrHK0rLUdlYU7A/9FUEGgbSAAk2rXyzFIFAWJRIUnJhUJEwhQEjoVkmYAvbz3mRf
         9r3nPefsYQ3P+67fv+pXRe2c6d6E9TxrnbX3XnXQncMjw3eGnwkvCn8S3hreEa4NnwyfDZ+//X9/ILw7
         /FV4XXhp+IXwPeEx4W5BktRHF4evD08NvxiuCuXY/7ZQZkGZCWU2lBlRZkX53+8LZYaUWfLa8MLw38OT
@@ -261,7 +261,7 @@
         dW8J5Zld5aTzp8OTQnn54otCw61W/x9gTTN+YeBM/gAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="statusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>122, 17</value>
   </metadata>
 </root>
